# doccano2spacy-format-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: format_differences.md
src/: custom_dtypes.py  custom_exceptions.py  custom_typehints.py  doccano2spacy.py  main.py  test_custom_dtypes.py  test_custom_exceptions.py  test_doccano2spacy.py
src/converter/: __main__.py  custom_dtypes.py  custom_typehints.py  doccano2spacy.py  test_custom_dtypes.py  test_custom_exceptions.py  test_doccano2spacy.py  test_samples.py
src/converter/data/: converted.jsonl  sample.jsonl
src/tests/: test_custom_dtypes.py  test_custom_exceptions.py  test_doccano2spacy.py
src/utils/: samples.py  test_samples.py
